<resources>
    <string name="app_name">有事</string>

    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入邮箱或手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱错误</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">这里不能为空</string>
    <string name="detail">详情</string>
    <string name="jump_next">跳过</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_login_out">退出</string>
    <string name="action_close">关闭</string>
    <string name="no_permission">没有权限</string>
    <string name="forget_pw">密码忘了</string>
    <string name="register_account">注册账号</string>
    <string name="time">有事</string>
    <string name="spring_season">社区</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>

    //文字图片
    <string name="mdi_library_books_20sp">{mdi-library-books 20sp}</string>
    <string name="md_nature_people_20sp">{md-nature-people 20sp}</string>
    <string name="md_explore_20sp">{md-explore 20sp}</string>
    <string name="md_person_20sp">{md-person 20sp}</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
