<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hotmall.ui.MainActivity">

    <include layout="@layout/appbar_layout" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickMenu"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdi_library_books_20sp"
                android:textColor="@color/main_bottom_color" />

            <TextView
                style="@style/main_bottom_text"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_season"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickMenu"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/md_nature_people_20sp"
                android:textColor="@color/main_bottom_color" />

            <TextView
                style="@style/main_bottom_text"
                android:text="@string/spring_season" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_explore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickMenu"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/md_explore_20sp"
                android:textColor="@color/main_bottom_color" />

            <TextView
                style="@style/main_bottom_text"
                android:text="@string/discovery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="clickMenu"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/md_person_20sp"
                android:textColor="@color/main_bottom_color" />

            <TextView
                style="@style/main_bottom_text"
                android:text="@string/mine" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
